# astronomer-cosmos

./: .airflow-registry.yaml  .codespell-ignore-words  .coveragerc  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .test_durations  .tiltignore  AGENTS.md  CHANGELOG.rst  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  DATABRICKS_ASYNC_PROPOSAL.md  Dockerfile  HACKWEEK.md  Makefile  PRIVACY_NOTICE.rst  README.md  README.rst  SECURITY.rst  TELEMETRY_INSTRUMENTATION.md  Tiltfile  codecov.yml  dev-requirements.txt  gha-requirements.txt  gha_retrieve_version.py  lychee.toml  netlify.toml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.astro/: test_dag_integrity_default.py
.github/: CODEOWNERS  ci-test-connections.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml
.github/workflows/: actionlint.yml  astro-deploy.yml  checks.yml  ci.yml  codeql.yml  deploy-to-astro.yaml  deploy.yml  docs-build.yml  docs.yml  main.yml  mlc_config.json  postgres-deployment.yaml  postgres-service.yaml  python-unit-tests.yml  stale.yml  test-unprivileged.yml  test.yml  test_kubernetes.yml  zizmor.yml
astro_tests/: .dockerignore  Dockerfile  README.md  dbt-requirements.txt  docker-compose.override.yml  packages.txt  requirements.txt
astro_tests/.astro/: config.yaml  test_dag_integrity_default.py
astro_tests/dags/: .airflowignore  databricks_manager.py  dbt_example_dags.py  pause_all_sandboxes.py  postgres_manager.py  redshift_manager.py  trigger_all_tests.py
astro_tests/include/: default_args.py
core/graph/: group.py
core/parse/: base_parser.py
core/render/: dag.py
core/types/: group.py  task.py
cosmos/: __init__.py  _json.py  airflow.py  builder.py  cache.py  cleanup.py  config.py  constants.py  converter.py  dag.py  dataset.py  debug.py  exceptions.py  fs.py  helpers.py  io.py  log.py  mocked_dbt_adapters.py  openlineage_custom.py  provider_info.py  render.py  settings.py  task_group.py  telemetry.py  versioning.py
cosmos/_triggers/: watcher.py
cosmos/_utils/: common.py  importer.py  watcher_state.py
cosmos/airflow/: _override.py  compatibility.py  dag.py  graph.py  group.py  master_build_converter.py  task_group.py
cosmos/cluster_policy/: watcher_retry_policy.py
cosmos/core/: airflow.py  render.py
cosmos/dbt/: executable.py  filter.py  graph.py  node.py  project.py  resource.py  runner.py  seed.py  selector.py
cosmos/dbt_adapters/: __init__.py  bigquery.py
cosmos/hooks/: subprocess.py
cosmos/listeners/: dag_run.py  dag_run_listener.py  task_instance_listener.py
cosmos/operators/: __init__.py  _k8s_common.py  airflow_async.py  aws_ecs.py  aws_eks.py  azure_container_instance.py  base.py  docker.py  eks.py  gcp_cloud_run_job.py  gcp_gke.py  gke.py  kubernetes.py  lazy_load.py  local.py  master_build.py  virtualenv.py  watcher.py  watcher_aws_ecs.py  watcher_gcp_gke.py  watcher_gke.py  watcher_kubernetes.py
cosmos/plugin/: __init__.py  af3_plugin_impl.py  airflow2.py  airflow3.py  cluster_policy.py  plugin_impl.py  snippets.py  storage.py
cosmos/profiles/: __init__.py  base.py  profile_config.py  test.py
cosmos/telemetry/: __init__.py  base.py  manager.py  scarf_client.py  scarf_emitter.py  utils.py
cosmos/telemetry_v2/: __init__.py  base.py  collector.py  manager.py  scarf_client.py  scarf_emitter.py  statsd.py  utils.py
cosmos/tests/: test-connections.yaml  test_example_dags.py  test_version.py
dags/: basic_cosmos_dag.py  cosmos_manifest_example.py  dbt_docs.py  example_cosmos_python_models.py  example_cosmos_sources.py  example_watcher.py
dev/: .gitignore  Dockerfile  Dockerfile.postgres_profile_docker_k8s  Dockerfile.watcher_failing_tests_k8s  docker-compose.yaml  requirements.txt
dev-af3/: README.md  airflow.cfg  requirements.txt  standalone.sh  tests.sh
dev/.astro/: config.yaml
dev/dags/: .airflowignore  .airflowignore.old  artificial_dataset_creator.py  basic_cosmos_dag.py  basic_cosmos_dag_full_module_path_imports.py  basic_cosmos_task_group.py  basic_cosmos_task_group_different_owners.py  basic_cosmos_task_group_test_manifest.py  cosmos_byo_profile.py  cosmos_callback_dag.py  cosmos_filtering_dag.py  cosmos_manifest_example.py  cosmos_manifest_selectors_example.py  cosmos_profile_mapping.py  dbt_docs.py  (+53 more)
docs/: compatibility-policy.rst  conf.py  contributing.rst  contributors-roles.rst  contributors.rst  faq.rst  generate_mappings.py  index.rst  requirements.txt
examples/: .gitignore  Dockerfile  README.md  airflow_settings.yaml  dbt-requirements.txt  docker-compose.override.yml  packages.txt  requirements.txt
plans/: 001-snow-dbt-project.md
requirements/: requirements-airflow-2.10-dbt-1.11.txt  requirements-airflow-2.10-dbt-1.12.txt  requirements-airflow-2.11-dbt-1.11.txt  requirements-airflow-2.11-dbt-1.12.txt  requirements-airflow-2.9-dbt-1.11.txt  requirements-airflow-2.9-dbt-1.12.txt  requirements-airflow-3.0-dbt-1.11.txt  requirements-airflow-3.0-dbt-1.12.txt  requirements-airflow-3.1-dbt-1.11.txt  requirements-airflow-3.1-dbt-1.12.txt  requirements-airflow-3.2-dbt-1.10.txt  requirements-airflow-3.2-dbt-1.11.txt  requirements-airflow-3.2-dbt-1.12.txt  requirements-airflow-3.2-dbt-1.8.txt  requirements-airflow-3.2-dbt-1.9.txt  requirements-airflow-3.3-dbt-1.11.txt  requirements-airflow-3.3-dbt-1.12.txt
scripts/: check_docs_style.py  ci_dbtf_delete_snowflake_resources.py  find_unused_type_ignores.py  tighten_type_ignores.py
tests/: __init__.py  conftest.py  pytest.ini  test_airflow.py  test_airflow_versioning.py  test_async_example_dag.py  test_async_remote_target_dir_specific_run_id.py  test_cache.py  test_config.py  test_converter.py  test_dataset.py  test_dbtf.py  test_debug.py  test_example_dags.py  test_example_dags_no_connections.py  test_example_k8s_dags.py  test_export.py  test_fs.py  test_helpers.py  test_init.py  test_io.py  test_log.py  test_render.py  test_settings.py  test_telemetry.py  test_utils.py  test_version.py  test_versioning.py  utils.py  validation_tests.py
tools/: README.md  airflow.cfg  env.sh  setup.sh
(+6059 files in other folders)
