[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astronomer-cosmos"
dynamic = ["version"]
description = "Render 3rd party workflows in Airflow"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Astronomer", email = "humans@astronomer.io" },
]
keywords = [
    "airflow",
    "apache-airflow",
    "astronomer",
    "dags",
    "dbt",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    # Airflow & Pydantic issue: https://github.com/apache/airflow/issues/32311
    "attrs",
    "pydantic>=1.10.0,<2.0.0",
    "apache-airflow>=2.3.0",
    "importlib-metadata; python_version < '3.8'",
    "Jinja2>=3.0.0",
    "typing-extensions; python_version < '3.8'",
    "virtualenv",
]

[project.optional-dependencies]
dbt-all = [
    "dbt-bigquery",
    "dbt-databricks",
    "dbt-exasol",
    "dbt-postgres",
    "dbt-redshift",
    "dbt-snowflake",
    "dbt-spark",
]
dbt-bigquery = [
    "dbt-bigquery",
]
dbt-databricks = [
    "dbt-databricks",
]
dbt-exasol = [
    "dbt-exasol",
]
dbt-postgres = [
    "dbt-postgres",
]
dbt-redshift = [
    "dbt-redshift",
]
dbt-snowflake = [
    "dbt-snowflake",
]
dbt-spark = [
    "dbt-spark",
]
openlineage = [
    "openlineage-integration-common",
    "openlineage-airflow",
]
all = [
    "astronomer-cosmos[dbt-all]",
    "astronomer-cosmos[openlineage]"
]
docs =[
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autobuild",
    "sphinx-autoapi"
]
tests = [
    "packaging",
    "pytest>=6.0",
    "pytest-split",
    "pytest-dotenv",
    "requests-mock",
    "pytest-cov",
    "pytest-describe",
    "sqlalchemy-stubs", # Change when sqlalchemy is upgraded https://docs.sqlalchemy.org/en/14/orm/extensions/mypy.html
    "types-requests",
    "mypy",
    "sqlalchemy-stubs", # Change when sqlalchemy is upgraded https://docs.sqlalchemy.org/en/14/orm/extensions/mypy.html
]

docker = [
    "apache-airflow-providers-docker>=3.5.0",
]
kubernetes = [
    "apache-airflow-providers-cncf-kubernetes>=5.1.1",
]


[project.urls]
Homepage = "https://github.com/astronomer/astronomer-cosmos"
Documentation = "https://astronomer.github.io/astronomer-cosmos"
"Source code" = "https://github.com/astronomer/astronomer-cosmos"

[tool.hatch.version]
path = "cosmos/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cosmos",
]

######################################
# TESTING
######################################

[tool.hatch.envs.tests]
dependencies = [
    "astronomer-cosmos[tests]",
    "apache-airflow-providers-docker>=3.5.0",
    "apache-airflow-providers-cncf-kubernetes>=5.1.1",
    "types-PyYAML",
    "types-attrs",
    "types-requests",
    "types-python-dateutil",
    "apache-airflow"
]

[[tool.hatch.envs.tests.matrix]]
python = ["3.8", "3.9", "3.10"]
airflow = ["2.3", "2.4", "2.5", "2.6", "2.7"]

[tool.hatch.envs.tests.overrides]
matrix.airflow.dependencies = [
    { value = "apache-airflow==2.3", if = ["2.3"] },
    { value = "apache-airflow==2.4", if = ["2.4"] },
    { value = "apache-airflow==2.5", if = ["2.5"] },
    { value = "apache-airflow==2.6", if = ["2.6"] },
    { value = "apache-airflow==2.7", if = ["2.7"] },
]

[tool.hatch.envs.tests.scripts]
freeze = "pip freeze"
type-check = "mypy cosmos"
test = 'pytest -vv --durations=0 . -m "not integration" --ignore=tests/test_example_dags.py --ignore=tests/test_example_dags_no_connections.py'
test-cov = """pytest -vv --cov=cosmos --cov-report=term-missing --cov-report=xml --durations=0 -m "not integration" --ignore=tests/test_example_dags.py --ignore=tests/test_example_dags_no_connections.py"""
# we install using the following workaround to overcome installation conflicts, such as:
# apache-airflow 2.3.0 and dbt-core [0.13.0 - 1.5.2] and jinja2>=3.0.0 because these package versions have conflicting dependencies
test-integration-setup = """pip uninstall dbt-postgres dbt-databricks; \
rm -rf airflow.*; \
airflow db init; \
pip install  'dbt-core'  'dbt-databricks' 'dbt-postgres' 'openlineage-airflow'"""
test-integration = """rm -rf dbt/jaffle_shop/dbt_packages;
rm -rf dev/dags/dbt/model_version/dbt_packages;
pytest -vv \
--cov=cosmos \
--cov-report=term-missing \
--cov-report=xml \
--durations=0 \
-m integration  \
-k 'not (example_cosmos_python_models or example_virtualenv or cosmos_manifest_example)'
"""
test-integration-expensive = """rm -rf dbt/jaffle_shop/dbt_packages;
rm -rf dbt/model_version/dbt_packages;
pytest -vv \
--cov=cosmos \
--cov-report=term-missing \
--cov-report=xml \
--durations=0 \
-m integration  \
-k 'example_cosmos_python_models or example_virtualenv'"""

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
minversion = "6.0"
markers = [
    "integration",
]

######################################
# DOCS
######################################

[tool.hatch.envs.docs]
dependencies = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autobuild",
    "sphinx-autoapi",
    "openlineage-airflow"
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build"
serve = "sphinx-autobuild docs docs/_build"

######################################
# THIRD PARTY TOOLS
######################################
[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
known_third_party = ["airflow", "jinja2"]

[tool.mypy]
strict = true
ignore_missing_imports = true
no_warn_unused_ignores = true

[tool.ruff]
line-length = 120

[tool.distutils.bdist_wheel]
universal = true
