[metadata]
name = cosmos
version = 1.0.0
url = https://github.com/astronomer/cosmos/
author = Astronomer
author_email = humans@astronomer.io
description = Apache Airflow Providers containing 3rd party integrations supported natively in Airflow
long_description = file: README.rst
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code=https://github.com/astronomer/cosmos/
    Homepage=https://astronomer.io/
    Documentation=https://cosmos.rtfd.io/
    Changelog=https://github.com/astronomer/cosmos/blob/main/CHANGELOG.rst

[options]
python_requires = >=3.7
packages = find_namespace:
include_package_data = true
namespace_packages = cosmos,cosmos.providers
install_requires =
    apache-airflow>=2.4
    dbt-core==1.3.1
    dbt-postgres==1.3.1
    dbt-snowflake==1.3.0
    dbt-bigquery==1.3.0
    dbt-redshift==1.3.0
zip_safe = false

[options.packages.find]
include =
    cosmos.*
