[metadata]
name = astronomer-cosmos
version = 0.0.6
url = https://github.com/astronomer/astronomer-cosmos/
author = Astronomer
author_email = humans@astronomer.io
description = Apache Airflow Providers containing 3rd party integrations supported natively in Airflow
long_description = file: README.rst
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code=https://github.com/astronomer/astronomer-cosmos/
    Homepage=https://astronomer.io/
    Documentation=https://cosmos.rtfd.io/
    Changelog=https://github.com/astronomer/astronomer-cosmos/blob/main/CHANGELOG.rst

[options]
python_requires = >=3.7
packages = find_namespace:
include_package_data = true
namespace_packages = cosmos,cosmos.core,cosmos.providers
install_requires =
    apache-airflow>=2.4
    pydantic>=1.8.2
    Jinja2>=3.0.0
zip_safe = false

[options.extras_require]
dbt.all =
    dbt-core
    dbt-snowflake
    dbt-postgres
    dbt-bigquery
    dbt-redshift

dbt.snowflake =
    dbt-core
    dbt-snowflake

dbt.postgres =
    dbt-core
    dbt-postgres

dbt.bigquery =
    dbt-core
    dbt-bigquery

dbt.redshift =
    dbt-core
    dbt-redshift

[options.packages.find]
include =
    cosmos.*
